Bug 30737 - Window resize strangeness article list view
Summary: Window resize strangeness article list view
Status: RESOLVED FIXED
Alias: None
Product: knode
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: RedHat Enterprise Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Volker Krause
URL:
Keywords:
: 31689 53872 66212 85582 90373 96350 (view as bug list)
Depends on:
Blocks:
 
Reported: 2001-08-16 14:33 UTC by tom
Modified: 2005-01-23 16:12 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot showing knode resized beyond screen wide. (125.99 KB, image/png)
2003-04-18 11:24 UTC, Stephan Johach
Details
proposed patch (2.10 KB, patch)
2004-11-24 22:04 UTC, Jakob Schröter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tom 2001-08-16 14:18:27 UTC
(*** This bug was imported into bugs.kde.org ***)

Package:           knode
Version:           KDE 2.2.0 
Severity:          normal
Installed from:    RedHat RPMs
Compiler:          Not Specified
OS:                Linux
OS/Compiler notes: Not Specified

When clicking on articles in the article list the main window of KNode resizes and repositions itself often partially off screen. This happened the first few times I ran the latest version of KNode. Right now I can't reproduce the bug. 

Very very odd.

(Submitted via bugs.kde.org)
Comment 1 Cp Hennessy 2002-09-25 02:12:46 UTC
The last update to this bug report was over 1 year ago.  
Can you please give us an updated on whether this is still a problem for you   
with a more recent version of knode?  
If it is not a problem - the status of this bug report will be changed to closed.  
 
Comment 2 Cp Hennessy 2002-09-30 01:13:14 UTC
this problem does not seem to be reproducible, therefore I am setting this  
as resolved. The resolution status is being set to INVALID but it should 
really be set to "NOT REPRODUCIBLE" if it was available :-( 
Comment 3 John Firebaugh 2002-09-30 01:28:28 UTC
Subject: Re:  Window resize strangeness article list view

On Sunday 29 September 2002 4:13, Cp Hennessy wrote:
> this problem does not seem to be reproducible, therefore I am
> setting this as resolved. The resolution status is being set to INVALID but
> it should really be set to "NOT REPRODUCIBLE" if it was available :-(

That's what "WORKSFORME" is for.

Comment 4 Moritz Moeller-Herrmann 2002-12-22 14:27:36 UTC
I encounter the problem in KDE-3.1 (KDE_3_1_BRANCH) with new qt, all self compiled. 
 
It did not appear until last week, so it might be elusive. What info do you need? 
Comment 5 Moritz Moeller-Herrmann 2003-04-16 23:56:32 UTC
*** Bug 53872 has been marked as a duplicate of this bug. ***
Comment 6 Moritz Moeller-Herrmann 2003-04-16 23:57:57 UTC
I encounter the bug in KDE-3.1.1 on a new distribution and with completely new 
settings. It does exist unless it is fixed in CVS, which should be documented here, I 
reopen it. 
Comment 7 Moritz Moeller-Herrmann 2003-04-17 00:00:58 UTC
*** Bug 31689 has been marked as a duplicate of this bug. ***
Comment 8 Stephan Johach 2003-04-18 11:24:54 UTC
Created attachment 1379 [details]
screenshot showing knode resized beyond screen wide.

This is easy to reproduce if you select a group with a long name (in german the
gui strings
are wider so this is often seen from german users only). To trigger the problem
try with a bigger font size. My screenshot shows the german knode GUI with
Arial 14.

How to reproduce:

Set knode to full size
Select a group with a rather long name (selecting a long filter name also
helps)
The status line is resized beyond the screen.
Comment 9 Sander Devrieze 2003-09-06 23:00:32 UTC
I also had this problem. I had kde 3.1.2 and the qt version needed for this
version (I also had the problem before kde 3.1.2). I have Gentoo. A few days ago
added the kde cvs ebuilds and started building kde cvs...and this started also
building a new version of qt (I think cvs, but I don't know). I also thaught it
removes the old qt (not sure anymore). After this a don't have the resize
problem anymore with knode from kde 3.1.2 (the stable one!). I think because it
uses know the new qt version. So...maybe it was a problem in qt and it's fixed now??
Comment 10 Volker Krause 2004-01-04 16:51:55 UTC
*** Bug 66212 has been marked as a duplicate of this bug. ***
Comment 11 Rainer Endres 2004-04-05 12:24:46 UTC
I can confirm this behaviour with KDE CVS (pre3.3) It does not resize beyond the screen (even the longest newsgroup was not able to be too big for my 1400*1050) resolution, but it still resizes the window when changing the newsgroup. 

Comment 12 Volker Krause 2004-08-24 12:35:59 UTC
*** Bug 85582 has been marked as a duplicate of this bug. ***
Comment 13 ubq7 2004-08-24 14:59:45 UTC
Here (KDE-3.2.3 on Debian Sarge) it does this resizing when getting the list of new posting and change to any abbreviated-displayed news group (e.g. comp.soft-sys.wxwindows).
However I doubt that it can be that hard to never(!) resize the window except when done by the user.

And yes, here it happens _every_ time I press the button to get new postings with the only exception of having the mark on the very first item (that groups all groups).

I have my group list on the right side and the window only extends to the right.

HS
Comment 14 Volker Krause 2004-09-28 11:37:04 UTC
*** Bug 90373 has been marked as a duplicate of this bug. ***
Comment 15 ubq7 2004-11-16 23:26:55 UTC
Is anything going to be done about this?
It even does not follow the rules of the window manager that maximized windows are not resizable.
I hereby reconfirm this bug for KDE-3.1.1. Absolutely NO OTHER application has this strange behaviour!

HS
Comment 16 Jakob Schröter 2004-11-24 22:04:59 UTC
Created attachment 8419 [details]
proposed patch

Could you please test the attached patch?
Comment 17 ubq7 2004-11-25 00:14:51 UTC
I downloaded KDE-3.1.1 from Debian unstable and applied the patch and built new packages and reinstalled knode from the created deb.
Then, I closed knode and started it again. Nothing changed, the main knode window is still resized on every update of the articles.
Comment 18 ubq7 2004-12-18 17:31:49 UTC
Correction to previous post: KDE-3.3.1 from Debian unstable (NOT 3.1.1)
Comment 19 Volker Krause 2005-01-05 17:15:01 UTC
*** Bug 96350 has been marked as a duplicate of this bug. ***
Comment 20 Volker Krause 2005-01-16 15:26:01 UTC
Fixed locally, patch pending on kde-pim@kde.org for review.
Comment 21 tom 2005-01-16 18:27:14 UTC
It's been four years. I don't *care* about this bug anymore.

How do I get off this list?

>------- You are receiving this mail because: -------
>You reported the bug, or are watching the reporter.
>         
>http://bugs.kde.org/show_bug.cgi?id=30737         
>volker.krause rwth-aachen de changed:
>
>           What    |Removed                     |Added
>----------------------------------------------------------------------------
>         AssignedTo|knode-devel kde org         |volker.krause rwth-aachen de
>             Status|NEW                         |ASSIGNED
>
>
>
>------- Additional Comments From volker.krause rwth-aachen de  2005-01-16 15:26 -------
>Fixed locally, patch pending on kde-pim kde org for review.
>  
>

Comment 22 Volker Krause 2005-01-23 15:38:25 UTC
CVS commit by vkrause: 

Use squeeze text labels for the status bar of Kontact and KNode.

This fixes various issues with status bar messages which have not been truncated correctly or not have been updated on resize, in the worst case leading to a main window resized beyond screen size.

We need our own slightly modified copy of the squeeze text label here since the one from kdeui doesn't support right squeezing.

BUG: 30737


  A            libkdepim/krsqueezedtextlabel.cpp   1.1 [LGPL]
  A            libkdepim/krsqueezedtextlabel.h   1.1 [LGPL]
  M +5 -12     knode/knmainwidget.cpp   1.61
  M +5 -5      knode/knmainwidget.h   1.26
  M +7 -5      knode/knode.cpp   1.133
  M +3 -1      knode/knode.h   1.57
  M +3 -2      knode/knode_part.cpp   1.15
  M +6 -7      kontact/src/mainwindow.cpp   1.135
  M +2 -2      kontact/src/mainwindow.h   1.57
  M +2 -1      libkdepim/Makefile.am   1.91



Comment 23 Hendrik Sattler 2005-01-23 16:04:35 UTC
The fix seems to indicate that not displaying the status is a work-around to this. So far, this seems to be true :-D
Comment 24 dottor mistero 2005-01-23 16:12:53 UTC
On Sunday 23 January 2005 16:04, Hendrik Sattler wrote:

> ------- Additional Comments From sattler2000 gmx de  2005-01-23 16:04
> ------- The fix seems to indicate that not displaying the status is a
> work-around to this. So far, this seems to be true :-D

How to disable status bar?

thanks