Use squeeze text labels for the status bar of Kontact and KNode.

This fixes various issues with status bar messages which have not been truncated correctly or not have been updated on resize, in the worst case leading to a main window resized beyond screen size.

We need our own slightly modified copy of the squeeze text label here since the one from kdeui doesn't support right squeezing.

BUG: 30737

svn path=/trunk/kdepim/; revision=381575